初步使用 protocol buffer 完成前后端传递数据。

--- a/demo/static/index.html
+++ b/demo/static/index.html
@@ -22,6 +22,8 @@
       </nav>
     </div>
   </main>
+  <script src="./protobuf.min.js"></script>
+  <!-- <script src="./chunk.canvas.js"></script> -->
   <script src="index.js"></script>
 </body>
 </html>
